# llvm-opt-benchmark

./: .gitignore  .gitmodules  LICENSE  README.md
bench/coremark/: CMakeLists.txt  build.sh
bench/coremark/optimized/: core_list_join.c.ll  core_main.c.ll  core_matrix.c.ll  core_portme.c.ll  core_state.c.ll  core_util.c.ll
bench/coremark/original/: core_list_join.c.ll  core_main.c.ll  core_matrix.c.ll  core_portme.c.ll  core_state.c.ll  core_util.c.ll
bench/pcg-cpp/: CMakeLists.txt  build.sh
bench/pcg-cpp/optimized/: codebook.cpp.ll  cppref-sample.cpp.ll  make-partytrick.cpp.ll  pcg-demo.cpp.ll  spew.cpp.ll  use-partytrick.cpp.ll
bench/pcg-cpp/original/: codebook.cpp.ll  cppref-sample.cpp.ll  make-partytrick.cpp.ll  pcg-demo.cpp.ll  spew.cpp.ll  use-partytrick.cpp.ll
bench/readerwriterqueue/: CMakeLists.txt  build.sh
bench/readerwriterqueue/optimized/: bench.cpp.ll  simplethread.cpp.ll  systemtime.cpp.ll
bench/readerwriterqueue/original/: bench.cpp.ll  simplethread.cpp.ll  systemtime.cpp.ll
bench/stb/: CMakeLists.txt  build.sh  stb_dxt.c  stb_hexwave.c  stb_image_resize2.c  stb_leakcheck.c  stb_tilemap_editor.c  stb_truetype.c  stb_voxel_render.c
bench/stb/optimized/: stb_c_lexer.c.ll  stb_connected_components.c.ll  stb_divide.c.ll  stb_ds.c.ll  stb_dxt.c.ll  stb_easy_font.c.ll  stb_herringbone_wang_tile.c.ll  stb_hexwave.c.ll  stb_image.c.ll  stb_image_resize2.c.ll  stb_image_write.c.ll  stb_include.c.ll  stb_leakcheck.c.ll  stb_perlin.c.ll  stb_rect_pack.c.ll  stb_sprintf.c.ll  stb_tilemap_editor.c.ll  stb_truetype.c.ll  stb_vorbis.c.ll  stb_voxel_render.c.ll
bench/stb/original/: stb_c_lexer.c.ll  stb_connected_components.c.ll  stb_divide.c.ll  (+16 more)
(+21392 files in other folders)
